# ft6336u-dd

./: Cargo.toml  README.md  device.yaml
.github/workflows/: rust_ci.yml
docs/: FT6336U-DataSheet-V1.0.md
src/: driver.rs  lib.rs
