[package]
name = "ft6336u-dd"
version = "0.1.0"
edition = "2024"
description = "A driver for the FT6336U capacitive touch controller (uses device-driver crate)"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/ft6336u-dd"
keywords = ["embedded-hal-driver", "async", "no-std", "touch", "ft6336u"]
readme = "README.md"
documentation = "https://docs.rs/ft6336u-dd"

[dependencies]
bisync = "0.3"
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
device-driver = { version = "1.0.6", default-features = false, features = ["yaml"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
thiserror = { version = "2.0.12", default-features = false }

[features]
default = []
std = ["thiserror/std"]
log = ["dep:log"]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03", "device-driver/defmt-03"]

[lib]
test = false
bench = false
